# UtilsCPP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/UtilsCPP/: Array.hpp  Dictionary.hpp  Error.hpp  Func.hpp  Functions.hpp  Iterator.hpp  Macros.hpp  Optional.hpp  RuntimeError.hpp  Set.hpp  SharedPtr.hpp  String.hpp  StructLayout.hpp  Types.hpp  UniquePtr.hpp
src/: String.cpp
src/Error/: RuntimeError.cpp
src/String/: String.cpp
src/StructLayout/: StructLayout.cpp
tests/: Array_testCases.cpp  CMakeLists.txt  Dictionary_testCases.cpp  Error_testCases.cpp  Func_testCases.cpp  Set_testCases.cpp  SharedPtr_testCases.cpp  SmartPointer_testCases.cpp  String_testCases.cpp  StructLayout_testCases.cpp  UniquePtr_testCases.cpp  random.cpp  random.hpp
